# grap-hs

./: default.nix  docker-compose.yaml  graphs.cabal
app/: Main.hs
src/: Graphs.hs
test/: Main.hs
